--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
   ],
   "dependencies": {
     "d3": "^5.16.0",
-    "react-d3-tree": "^1.16.1"
+    "node-sass": "^4.14.1",
+    "react-d3-tree": "^1.16.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "redux": "^4.0.5"
   }
 }
