--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.27",
+    "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "babel-eslint": "^10.0.3",
@@ -60,6 +61,7 @@
     "react-d3-tree": "^1.16.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   }
 }
