--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-d3-tree": "^1.16.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
+    "react-dnd-touch-backend": "^11.1.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   }
